# ParallaxEdu2015-Ex1

./: .gitignore  LICENSE  README.md
Exercise/: main.cpp
Exercise/include/: MatrixAdd.hpp  OclObject.hpp
Exercise/ocl/: matrix.cl
Solution/: CMakeLists.txt  main.cpp
Solution/include/: MatrixAdd.hpp  MatrixSub.hpp  OclObject.hpp  WComputable.hpp  err_code.h
Solution/ocl/: matrix.cl
Test/: CMakeLists.txt  FindOpenCL.cmake  main.cpp
